<resources>
    <string name="app_name">heroes-app</string>
    <string name="usuario_criado">Usuário Criado!</string>
    <string name="informe_nome_de_usuario">O nome de usuário não pode ser vázio.</string>
    <string name="informe_e_mail">O e-mail precisa conter: (@) (.com).</string>
    <string name="informe_senha">A senha precisa conter no mínimo 8 caracteres.</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="user">Nome de Usuário</string>
    <string name="criar_personagem">Clique na imagem abaixo.</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="url">URL</string>
    <string name="age">Idade</string>
    <string name="date">Data</string>
    <string name="erro_ao_criar_usuario">Erro ao criar usuário. Tente novamente mais tarde</string>
    <string name="adicionar_personagem">Adicionar Personagem</string>

    <string name="texto_novoUsuario">Novo por aqui?</string>


    <string name="mensagem_nome_personagem">Erro, insira um nome válido</string>
    <string name="mensagem_descricao_personagem">Erro, insira uma descrição</string>
    <string name="mensagem_url_personagem">Erro, insira uma url válida</string>
    <string name="tipo_empresa">Erro, selecione um universo válido</string>
    <string name="tipo_personagem">Erro, selecione um tipo de personagem</string>
    <string name="idade_personagem">Erro, insira a idade do personagem</string>
    <string name="data_personagem">Erro, selecione uma data</string>
    <string name="erroGenerico_personagem">Erro ao criar, tente novamente</string>
    <string name="sucessoCriar_personagem">Personagem criado com sucesso!</string>


    <string-array name="tipo_personagem">
        <item>Herói</item>
        <item>Vilão</item>
    </string-array>

    <string-array name="tipo_empresa">
        <item>DC</item>
        <item>Marvel</item>
    </string-array>
</resources>